--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicons/favicon-16x16.png" />
+    <link rel="manifest" href="./src/assets/favicons/site.webmanifest" />
+    <link rel="mask-icon" href="./src/assets/favicons/safari-pinned-tab.svg" color="#14151a" />
+    <meta name="msapplication-TileColor" content="#14151a" />
+    <meta name="theme-color" content="#14151a" />
+
     <title>Aditya Sharma | Portfolio</title>
   </head>
   <body>
